--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 <body class="bg-slate-950 text-slate-100">
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <!-- Use relative path for Vite entry point -->
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
