Change Vite entry point to use absolute path

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 <body class="bg-slate-950 text-slate-100">
   <div id="root"></div>
-  <!-- Use relative path for Vite entry point -->
-  <script type="module" src="./index.tsx"></script>
+  <!-- Use absolute path for Vite entry point source -->
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
